--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,21 @@
     height: 100vh;
     background-color: #fefc01;
 }
+
+.app__logo{
+    height: 100px;
+    object-fit: contain;
+}
+
+.app__background{
+    background-color: white;
+    height: 400px;
+}
+
+.app__body{
+    background: url("https://pngkey.com/png/full/859-8598072_picture-freeuse-library-silhouette-mobile-at-getdrawings-cell.png") no-repeat center;
+    background-size: contain;
+    height: 400px;
+    width: 249px;
+    padding: 74px;
+}
