--- a/src/components/chats.css
+++ b/src/components/chats.css
@@ -58,3 +58,24 @@
     color: white;
     opacity: 0.7;
 }
+
+.chats__takePicIcon{
+    position: absolute;
+    background-color: white;
+    border-radius: 200px;
+    color: gray;
+    font-size: 40px !important;
+    cursor: pointer;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.chats__takePicIcon:hover{
+    opacity: 0.8;
+}
+
+.chats__searchIcon, .chats__chatIcon{
+    color: white;
+    font-size: 13px !important;
+}
